cluster/apps/observability/promtail/networkpolicies/promtail.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: promtail
  namespace: observability
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: promtail
      app.kubernetes.io/name: promtail
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            app.kubernetes.io/instance: kube-prometheus-stack-prometheus
            "k8s:io.kubernetes.pod.namespace": observability
        - matchLabels:
            app.kubernetes.io/name: grafana
            app.kubernetes.io/instance: kube-prometheus-stack
            "k8s:io.kubernetes.pod.namespace": observability
      toPorts:
        - ports:
            - port: "3101"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443" # kube-api
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: loki
            app.kubernetes.io/instance: loki
            "k8s:io.kubernetes.pod.namespace": observability
      toPorts:
        - ports:
            - port: "3100"
              protocol: TCP
